# mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  input.md  processed_files.json  pyproject.toml
example/: Dockerfile  README.md  client.py  docker-compose.yml  example.py  greet.py  pyproject.toml
src/client/: client_checkfile.py  client_convert.py  client_upload.py  client_upload_bk.py
src/convert_pdf/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/convert_pdf/src/: convert_mcp.py  pdf2md.py
src/crawl_mcp/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/crawl_mcp/src/: client_crawl.py  crawl_mcp.py
src/server/: convert_mcp.py  pdf2md.py  upload_mcp.py
