[project]
name = "mcp-example"
version = "0.1.0"
description = "A subproject of MCP providing weather and greeting tools using FastMCP"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "uvicorn>=0.30.6",
    "mcp>=0.1.43",
]

[project.scripts]
mcp-server = "example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
